# Tadas_Butkus_pmp_pigugroup_eu

./: convert_from_csv_to_exel.py  detailed_info_excel.xlsx  detailed_info_product_24_10_2024.csv  main.html  main.py  pyproject.toml
